database: 	1. major changes because my brother is an idiot server-side: 	1. updates in com.model, com.dao & com.daoImpl 	2. updates in log package 	3. log pauses & resumes with the simulator 	4. log is saved every pause client-side: 	1. index.html shows event IDs 	2. index.html manages times as numbers. converts them to string only for presentation 	3. clinet.html needs some fixes